# truthification

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: agentic-model-of-text-generation.md  blog_post.md  environment-v2.md  environment.md  handmade-atomic-statements-experiment.md  index.html  preliminary-experiments-analysis.md  report_draft.md  sample_trajectories.json  scale_experiment.html  trajectories.html  truthification-project-overview.md
experiments/: dashboard.py  dashboard_v2.py  generate_debate_dashboard.py  plot_accuracy_by_model.py  plot_full_context_comparison.py  plot_results.py  run_agent_id_experiment.py  run_agent_strategy_inference_experiment.py  run_complexity_objective.py  run_comprehensive_suite.py  run_controlled_context_experiment.py  run_cot_access_experiment.py  run_debate_structure.py  run_deception_strategies_experiment.py  run_enhanced_context_experiment.py  run_experiment.py  run_f1_evolution_experiment.py  run_forced_oracle_test.py  run_icl.py  run_icl_context_scaling.py  run_icl_full_context.py  run_model_comparison_experiment.py  run_multi_factor_experiment.py  run_no_oracle_experiment.py  run_oracle_budget_experiment.py  run_oracle_budget_objective.py  run_phase2_only.py  run_scale_experiment.py  run_search_space_experiment.py  run_simulation.py  run_strategy_matrix_experiment.py  run_theory_context_experiment.py  run_v2_experiment.py  test_debate_structure.py  test_minimal.py  test_v2_minimal.py
results/: AGENT_STRATEGIES_ANALYSIS.md  COMPREHENSIVE_RESULTS.md  EXPERIMENTAL_RESULTS_SUMMARY.md  EXPERIMENT_LOG.md  (+1 more)
(+202 files in other folders)
